--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,29 +1,69 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   display: grid;
   gap: 0 1em;
   grid-template-columns: 1fr;
 }
-@media (min-width: 500px) {
+body ul {
+  list-style-type: none;
+}
+body ul h1 {
+  margin: 1rem;
+  text-decoration: underline;
+}
+@media (max-width: 575px) {
+  body .body {
+    margin-top: 3rem;
+  }
+}
+body .bodyy {
+  position: relative !important;
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 575px) {
   body {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   }
   body .body {
     grid-row: span 1;
-    grid-column: span 2;
-  }
-  body .bodyy {
-    position: relative;
-    display: flex;
-    flex-direction: column;
+    grid-column: span 3;
+    padding-bottom: 2rem;
   }
 }
 
 nav {
-  min-height: 100vh;
-  border-right: 1px solid black;
+  padding-left: 1rem;
+  grid-row: span 1;
+  grid-column: span 2;
+}
+@media (min-width: 575px) {
+  nav {
+    margin-bottom: 2rem;
+    min-height: 100vh;
+    border-right: 1px solid black;
+  }
 }
 
-input, select, option {
+@keyframes outro {
+  0% {
+    transform: translate(0);
+  }
+  50% {
+    transform: translateX(50%);
+  }
+  100% {
+    transform: translateX(200%);
+  }
+}
+input,
+select,
+option {
   outline: none;
   padding: 0.2em 0.7em;
 }
@@ -32,6 +72,7 @@ input, select, option {
   position: absolute;
   top: 110%;
   width: 100%;
+  max-width: 20rem;
   font-size: 1.5rem;
   font-weight: bolder;
 }
@@ -40,11 +81,41 @@ input, select, option {
   position: relative;
   padding: 1rem;
   z-index: 1;
+  padding: 1rem;
+  line-height: 3em;
+  margin: auto;
+  margin: 1rem;
+  box-shadow: 1px 1px 1px #333;
+  transition: transform 200ms ease;
+  max-width: 500px;
+  width: clamp(250px,90%, 500px);
+}
+.mainContainer .deleteBtn {
+  border-radius: 50%;
+  transition: background 500ms ease;
+  transition: color 500ms ease;
+}
+.mainContainer .deleteBtn:hover {
+  background: #d35e5e;
+  color: #d3d2d2;
 }
 .mainContainer div select {
   position: absolute;
   right: 10px;
   top: 80%;
+}
+.mainContainer div button {
+  padding: 0.3rem 1rem;
+  text-transform: uppercase;
+}
+
+.mainContainer:hover {
+  transform: translate(-0.1rem, -0.1rem);
+  box-shadow: 1px 1px 1px #333;
+}
+
+li :hover {
+  cursor: pointer;
 }
 
 .low {
@@ -74,22 +145,29 @@ input, select, option {
 }
 
 .modal {
-  position: absolute;
+  position: fixed;
+  max-width: 100%;
   top: 0;
   right: 0;
   z-index: 2;
-  width: 68%;
   height: 100%;
+  width: 100vw;
   background: rgba(0, 0, 0, 0.2);
-  display: grid;
-  place-content: center;
+  padding: 8%;
+  width: 100%;
+}
+@media (min-width: 575px) {
+  .modal {
+    width: 100%;
+  }
 }
 
 .form {
   position: relative;
-  width: clamp(100px,70vw, 400px);
+  width: clamp(50px, 70vw, 400px);
+  max-width: 90%;
   background: #fffdfd;
-  margin: 50px;
+  margin: auto;
   height: clamp(60vh, 100vh);
   display: flex;
   gap: 1em;
@@ -102,20 +180,89 @@ input, select, option {
   gap: 0.3em;
 }
 
-.visible {
-  display: none;
-}
-
 .projects {
   position: relative;
+  transition: all 300ms ease;
 }
-.projects li :hover {
-  background: #807b7b;
+.projects li {
+  font-size: 1.3rem;
+  margin: 0.1rem;
+  background: #fcf7f7;
+}
+.projects li:hover {
+  cursor: pointer;
+}
+.projects form {
+  transition: all 300ms ease;
+  max-width: 50%;
+  margin: auto;
+  background: rgba(128, 128, 128, 0.3);
+  border-radius: 5px;
+  box-shadow: 3px 2px 3px #333;
+  gap: 0.5rem;
+  padding: 0.5rem;
+  position: relative;
+  min-height: 6rem;
+}
+@media (min-width: 575px) {
+  .projects form {
+    width: 90%;
+    max-width: 250px;
+  }
+}
+.projects form input[type=text] {
+  letter-spacing: 3px;
+  margin-top: 1rem;
+  max-width: 90%;
+  display: block;
+  margin: auto;
+  background: rgba(128, 128, 128, 0.1);
+}
+.projects form input[type=button],
+.projects form input[type=submit] {
+  border-radius: 4px;
+  bottom: 1rem;
+}
+.projects form input[type=submit] {
+  background: rgba(0, 204, 0, 0.5);
+  position: absolute;
+  left: 1rem;
+}
+.projects form input[type=button] {
+  background: rgba(204, 41, 0, 0.5);
+  position: absolute;
+  right: 1rem;
 }
 .projects .projectsBtn {
   position: absolute;
-  bottom: -20px;
-  width: clamp(20px,70%, 100px);
+  bottom: -25px;
+  width: 50px;
+  left: 50%;
+  margin-left: -25px;
+}
+
+.logo {
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+
+select {
+  border: 1px solid #ccc;
+  height: 2rem;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+option {
+  background: inherit;
+  height: 2rem;
+}
+
+.visible {
+  animation: outro 500ms;
+  display: none;
+  transition: display 400ms ease;
 }
 
 /*# sourceMappingURL=style.css.map */
