--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,3 +1,11 @@
+:root {
+  --clr: black;
+  --primary-clr: white;
+  --border-clr: black;
+  --border-radius: 4px;
+  font-family: "Courier New", Courier, monospace;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -7,7 +15,6 @@
 body {
   display: grid;
   gap: 0 1em;
-  grid-template-columns: 1fr;
 }
 body ul {
   list-style-type: none;
@@ -21,14 +28,19 @@ body ul h1 {
     margin-top: 3rem;
   }
 }
+@media (min-width: 575px) {
+  body .body {
+    margin-left: 20rem;
+  }
+}
 body .bodyy {
-  position: relative !important;
-  display: flex;
-  flex-direction: column;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 @media (min-width: 575px) {
   body {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
   }
   body .body {
     grid-row: span 1;
@@ -39,14 +51,18 @@ body .bodyy {
 
 nav {
   padding-left: 1rem;
+  background: rgba(152, 6, 152, 0.5);
+  color: var(--primary-clr);
   grid-row: span 1;
   grid-column: span 2;
+  width: 100%;
 }
 @media (min-width: 575px) {
   nav {
+    width: 20rem;
     margin-bottom: 2rem;
     min-height: 100vh;
-    border-right: 1px solid black;
+    position: fixed;
   }
 }
 
@@ -69,12 +85,36 @@ option {
 }
 
 .addBtn {
+  outline: var(--border-clr) solid;
+  outline-offset: -4px;
+  background: var(--primary-clr);
+  color: var(--clr);
+  border-radius: var(--border-radius);
   position: absolute;
   top: 110%;
-  width: 100%;
-  max-width: 20rem;
   font-size: 1.5rem;
   font-weight: bolder;
+  transition: color 200ms ease, background 200ms ease;
+}
+.addBtn:hover {
+  --primary-clr: hsl(120, 77%, 66%);
+  --clr: white;
+  --border-clr: white;
+}
+@media (max-width: 575px) {
+  .addBtn {
+    width: 5rem;
+    left: 50%;
+    margin-left: 2.5rem;
+  }
+}
+@media (min-width: 575px) {
+  .addBtn {
+    left: 50%;
+    margin: 0;
+    margin-left: -2rem;
+    width: 4rem;
+  }
 }
 
 .mainContainer {
@@ -88,7 +128,7 @@ option {
   box-shadow: 1px 1px 1px #333;
   transition: transform 200ms ease;
   max-width: 500px;
-  width: clamp(250px,90%, 500px);
+  width: clamp(300px, 90%, 500px);
 }
 .mainContainer .deleteBtn {
   border-radius: 50%;
@@ -150,7 +190,7 @@ li :hover {
   top: 0;
   right: 0;
   z-index: 2;
-  height: 100%;
+  max-height: 100%;
   width: 100vw;
   background: rgba(0, 0, 0, 0.2);
   padding: 8%;
@@ -183,34 +223,44 @@ li :hover {
 .projects {
   position: relative;
   transition: all 300ms ease;
+  padding-bottom: 1rem;
 }
 .projects li {
   font-size: 1.3rem;
   margin: 0.1rem;
-  background: #fcf7f7;
+  text-transform: capitalize;
+  font-family: "Courier New", Courier, monospace;
 }
 .projects li:hover {
   cursor: pointer;
 }
-.projects form {
+.projects .prompt {
+  display: grid;
+  overflow: hidden;
   transition: all 300ms ease;
+  z-index: 3;
+  background: var(--primary-clr);
   max-width: 50%;
   margin: auto;
-  background: rgba(128, 128, 128, 0.3);
   border-radius: 5px;
   box-shadow: 3px 2px 3px #333;
   gap: 0.5rem;
   padding: 0.5rem;
   position: relative;
-  min-height: 6rem;
+  max-height: 1000px;
 }
 @media (min-width: 575px) {
-  .projects form {
+  .projects .prompt {
     width: 90%;
     max-width: 250px;
   }
 }
-.projects form input[type=text] {
+.projects .prompt .wrap {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.projects .prompt input[type=text] {
   letter-spacing: 3px;
   margin-top: 1rem;
   max-width: 90%;
@@ -218,20 +268,15 @@ li :hover {
   margin: auto;
   background: rgba(128, 128, 128, 0.1);
 }
-.projects form input[type=button],
-.projects form input[type=submit] {
+.projects .prompt input[type=button],
+.projects .prompt input[type=submit] {
   border-radius: 4px;
-  bottom: 1rem;
 }
-.projects form input[type=submit] {
+.projects .prompt input[type=submit] {
   background: rgba(0, 204, 0, 0.5);
-  position: absolute;
-  left: 1rem;
 }
-.projects form input[type=button] {
+.projects .prompt input[type=button] {
   background: rgba(204, 41, 0, 0.5);
-  position: absolute;
-  right: 1rem;
 }
 .projects .projectsBtn {
   position: absolute;
@@ -260,9 +305,22 @@ option {
 }
 
 .visible {
-  animation: outro 500ms;
-  display: none;
-  transition: display 400ms ease;
+  transform-origin: top;
+  transform: scale(1, 0);
+  max-height: 0;
+  height: 0px;
+  min-height: 0;
+  color: transparent;
+  margin-bottom: 0;
+  transition: padding 1000ms ease-in-out, max-height 1000ms ease-in-out, transform 1000ms ease, margin-bottom 1000ms ease;
+}
+.visible .prompt * {
+  opacity: 0;
+  transition: opacity 400ms ease-in-out;
+}
+.visible .form {
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
 }
 
 /*# sourceMappingURL=style.css.map */
